# embedded-test-std-runner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yaml  release.yml
src/: main.rs
